portfolio-item fix for img with no whitespace(padding)

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -85,7 +85,6 @@
     padding-inline: 0;
     width: 100%;
     height: 100%;
-    max-width: 560px;
 
     img {
         /*width: 100%;*/
@@ -169,6 +168,13 @@
     }
 }
 
+@media only screen and (width >= 1200px) {
+    .modal-trigger,
+    .portfolio-item-link {
+        max-width: 560px;
+        max-height: 560px;
+    }
+}
 
 .set-bg {
     background-repeat: no-repeat;
